--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ img{
     
 }
 .details{
-    background-color: #6ba4d0;
+    background-color: #887ed6;
     height: 9rem;
     width: 15rem;
     margin: 1rem;
