border radius for break

--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@ img{
     margin: auto;
     height: 0.1rem;
     width: 90%;
+    border-radius: 0.4rem;
     background-color: #505a6095;   
 }
 .date-time{
@@ -100,7 +101,7 @@ img{
     
 }
 .details{
-    background-color: #887ed6;
+    background-color: #7e85d6;
     height: 9rem;
     width: 15rem;
     margin: 1rem;
@@ -113,6 +114,7 @@ img{
     width: 90%;
     height: 0.1rem;
     background-color: #234a6137;
+    border-radius: 0.2rem;
 }
 .wind h1{
     margin-top: 0px;
