--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Anta&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
 *{
     font-size: 1rem;
     font-weight: 500;
@@ -97,8 +96,8 @@ img{
     align-content: space-around;
     position: relative;
     left: -200rem;
-    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
-    
+    transition: cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s; 
+    overflow: hidden;
 }
 .details{
     background-color: #7e85d6;
@@ -119,11 +118,9 @@ img{
 .wind h1{
     margin-top: 0px;
 }
-
 .details h1{
     font-size: 2rem;
 }
-
 p{
     font-size: large;
     font-weight: 700;
@@ -145,6 +142,7 @@ p{
     }
     .data{
         padding: 0.2rem;
+        overflow: auto;
     }
     .details{
         margin: 0.2rem;
@@ -165,6 +163,7 @@ p{
     .main-card{
         width: 100%;
         height: 90vh;
+        overflow: hidden;
      } 
      button{
      left: 20rem;
