--- a/styles.css
+++ b/styles.css
@@ -12,13 +12,30 @@ body{
 .main{
     height: 100vh;
     display: flex;
+    background-image: url(./images/bg9.png);
+    background-size: contain;
+   background-clip: border-box;
+    background-position: 9rem;
 }
+.main.blur::before {          /*to add blur effect on the main div*/
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(12px) ;     /* for a glass like blur*/
+}
+
 .main-card{
-    z-index: 1;
+    z-index: 6;
+    border-right: 2px solid black;
     width: 25rem;
-    background-color: white;
+    background-color: #ece5e5;
     padding: 2rem;
     transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275) 1s;
+}
+.main-cardafter{
+    box-shadow: 1px 1px 10px rgb(15, 15, 15);
+    border: 0px;
 }
 input{
     margin: auto;
@@ -84,8 +101,8 @@ img{
    margin-bottom: 0rem;
 }
 .data{
+    z-index: 2;
     padding: 4rem;
-    background-color:#ece5e5;
     width: 100%;
     flex: 1;                            
     overflow:scroll;   
@@ -100,7 +117,7 @@ img{
     overflow: hidden;
 }
 .details{
-    background-color: #7e85d6;
+    background-color: #7b5ec2;
     height: 9rem;
     width: 15rem;
     margin: 1rem;
@@ -159,7 +176,7 @@ p{
         width: 9rem;
     }
    }
-   @media (max-width:760px) {
+   /* @media (max-width:760px) {
     .main-card{
         width: 100%;
         height: 90vh;
@@ -172,4 +189,4 @@ p{
      .data{
         display: none;
      }
-   }
+   } */
