--- a/styles.css
+++ b/styles.css
@@ -176,7 +176,7 @@ p{
         width: 9rem;
     }
    }
-   /* @media (max-width:760px) {
+   @media (max-width:760px) {
     .main-card{
         width: 100%;
         height: 90vh;
@@ -189,4 +189,4 @@ p{
      .data{
         display: none;
      }
-   } */
+   }
